--- a/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-aviary.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-aviary.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will your rearing aviary system have these features?
+    Will the rearing aviary system have these features?
 {% endblock %}
 
 {% block content %}
@@ -49,7 +49,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will your rearing aviary system have these features?',
+                            text: 'Will the rearing aviary system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
