--- a/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-step-up.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier-step-up.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will your step-up system have these features?
+    Will the step-up system have these features?
 {% endblock %}
 
 {% block content %}
@@ -40,7 +40,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will your step-up system have these features?',
+                            text: 'Will the step-up system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
