--- a/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Which multi-tier system will the pullet housing have?
+    Which multi-tier system will the building have?
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
                     name: 'multi-tier',
                     fieldset: {
                         legend: {
-                            text: 'Which multi-tier system will the pullet housing have?',
+                            text: 'Which multi-tier system will the building have?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
