--- a/app/views/layinghens/current/eligibility/aviary/welfare.html
+++ b/app/views/layinghens/current/eligibility/aviary/welfare.html
@@ -74,13 +74,8 @@
                     The building must have a high welfare aviary housing system.
                 </p>
                 <p>
-                    Some systems are designed to maximise accessibility, while others will need welfare ramps and platforms to meet the high welfare requirement.
+                    The aviary system must have welfare ramps and platforms if the hens would need to jump or fly more than one metre in height to move between levels.
                 </p>
-                <p>
-                    You cannot install a combi-cage system in your grant-funded building.
-                </p>
-
-             
             </div>
 
         </div>
