--- a/app/views/layinghens/current/eligibility/ventilation/features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/features.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have a mechanical ventilation system with these features?
+    Will the building have a mechanical ventilation system with these features? 
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The ventilation must have:
+                        The mechanical ventilation system must have:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
