--- a/app/views/layinghens/current/eligibility/veranda/elim-specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-specification.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The veranda of the housing must have:
+                    The veranda must have a:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
