--- a/app/views/layinghens/current/eligibility/veranda/exempt.html
+++ b/app/views/layinghens/current/eligibility/veranda/exempt.html
@@ -84,13 +84,8 @@
                 </h2>
 
                 <p>
-                    The building must have a veranda.
-                </p>
-
-                <p>
-                    There are exemptions to adding a veranda if you do not have the required space.
-                </p>
-    
+                    You must add a veranda to the building if you have the required space
+                </p>    
             </div>
 
          </div>
