--- a/app/views/layinghens/current/eligibility/ventilation/elim-features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/elim-features.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The ventilation must have:
+                    The mechanical ventilation system must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
