--- a/app/views/layinghens/current/eligibility/veranda/specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/specification.html
@@ -20,7 +20,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The veranda of the housing must have:
+                        The veranda must have a:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
