--- a/app/views/layinghens/current/eligibility/building/egg-store.html
+++ b/app/views/layinghens/current/eligibility/building/egg-store.html
@@ -37,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['egg-store'] == 'Yes',
                             attributes: {
-                                    'data-next': '../aviary/present'
+                                    'data-next': '../features/concrete-apron'
                                 }
                         },
                         {
