--- a/app/views/layinghens/current/eligibility/features/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/features/concrete-apron.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have a continuous concrete apron around its perimeter?
+    Will the building have a continuous concrete apron around its perimeter?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                 classes: 'govuk-radios--inline',
                 fieldset: {
                     legend: {
-                        text: 'Will the ' + poultryType + ' housing have a continuous concrete apron around its perimeter?',
+                        text: 'Will the building have a continuous concrete apron around its perimeter?',
                         isPageHeading: true,
                         classes: 'govuk-fieldset__legend--l'
                     }
