--- a/app/views/layinghens/current/eligibility/veranda/biosecurity.html
+++ b/app/views/layinghens/current/eligibility/veranda/biosecurity.html
@@ -54,7 +54,7 @@
                             value: 'Yes',
                             checked: true if data['veranda-biosecurity'] == 'Yes',
                             attributes: {
-                                    'data-next': 'pop-holes'
+                                    'data-next': '../building/egg-store'
                                 }
                         },
                         {
