updates to solar journey

--- a/app/views/layinghens/current/eligibility/funding/cost.html
+++ b/app/views/layinghens/current/eligibility/funding/cost.html
@@ -15,7 +15,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="elim-project-cost">
+            <form action="elim-cost">
 
                 <h1 class="govuk-heading-l">
                     What is the total estimated cost of the {{ poultryType }} housing?
