--- a/app/views/layinghens/current/eligibility/funding/energy-output.html
+++ b/app/views/layinghens/current/eligibility/funding/energy-output.html
@@ -10,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="solar-cost">
+            <form action="potential-funding-solar">
 
                 <h1 class="govuk-heading-l">
                     How much energy will your solar PV system produce?
