--- a/app/views/layinghens/current/eligibility/funding/number-of-birds.html
+++ b/app/views/layinghens/current/eligibility/funding/number-of-birds.html
@@ -15,7 +15,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="elim-number-of-birds">
+            <form action="solar-cost">
 
                 <h1 class="govuk-heading-l">
                     How many {{ poultryType }}s will there be in the house?
