--- a/app/views/layinghens/current/eligibility/funding/solar-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/solar-cost.html
@@ -10,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="potential-funding-solar">
+            <form action="energy-output">
 
                 <h1 class="govuk-heading-l">
                     What is the estimated cost of buying and installing the solar PV system?
