--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -18,30 +18,12 @@
                         You must provide confirmation from a building expert, contractor or structural engineer that your roof can support solar PV panels for your full application. Confirmation is not funded by this grant.
                     </p>
 
-                    <p class="govuk-hint"> 
-                        Your roof is exempt if:
-                    </p>
-
-                    <ul class="govuk-hint govuk-list govuk-list--bullet">
-                        <li>
-                            the building is listed or on a World Heritage Site
-                        </li>
-                        <li>
-                            you're upgrading an existing building and would not otherwise make changes to the roof
-                        </li>
-                        <li>
-                            the roof faces only north or is heavily shaded
-                        </li>
-                        <li>
-                            the roof does not have 100m<sup>2</sup> of clear roof space
-                        </li>
-                    </ul>
-
                 {% endset %}
 
                 {{ govukRadios ({
                     idPrefix: 'roof-support-for-solar-pv',
                     name: 'roof-support-for-solar-pv',
+                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will the roof of the grant-funded housing be able to support solar PV panels?',
@@ -66,15 +48,7 @@
                             value: 'No',
                             checked: true if data['roof-support-for-solar-pv'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-roof-support-for-solar-pv'
-                                }
-                        },
-                        {
-                            text: 'My roof is exempt',
-                            value: 'Exempt',
-                            checked: true if data['roof-support-for-solar-pv'] == 'Exempt',
-                            attributes: {
-                                    'data-next': 'project-cost-total'
+                                    'data-next': 'exemptions'
                                 }
                         }
                     ]
@@ -97,6 +71,24 @@
                     <span class="app-step-nav-related__pretitle">Eligibility</span>
                     </h2>
                     <p>The roof must be able to support solar PV panels, allowing for potential use in the future.</p>
+                     <p class="govuk-hint"> 
+                        Your roof is exempt if:
+                    </p>
+
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            the building is listed or on a World Heritage Site
+                        </li>
+                        <li>
+                            you're upgrading an existing building and would not otherwise make changes to the roof
+                        </li>
+                        <li>
+                            the roof faces only north or is heavily shaded
+                        </li>
+                        <li>
+                            the roof does not have 100m<sup>2</sup> of clear roof space
+                        </li>
+                    </ul>
                 </div>
             </div>
 
