folder changes and some change log changes

--- a/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
@@ -29,7 +29,7 @@
                     }
                 },
                 hint: {
-                    text: 'This must include any veranda areas if there is no adjacent range, for example barn systems'
+                    text: 'This must include the veranda if there is range space next to the building'
                 },
                 items: [
                     {
@@ -65,7 +65,13 @@
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
-                <p>The {{ poultryType }} housing and any barn system veranda areas must be surrounded by a continuous concrete apron (a hardstanding concrete area).</p>
+
+                <p>
+                The building and veranda must be surrounded by a continuous strip of concrete.</p>
+
+                <p>
+                You do not have to include the veranda if there is range space next to the building, for example, for barn systems
+                </p>
             </div>
 
         </div>
