--- a/app/views/layinghens/current/eligibility/building/elim-insulation.html
+++ b/app/views/layinghens/current/eligibility/building/elim-insulation.html
@@ -14,7 +14,7 @@
 
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
-                {% if data['project-type'] == 'refurbish' %}
+                {% if data['project-type'] == 'refurb' %}
                     <p>
                         The building must have full wall and roof insulation.
                     </p>
