--- a/app/views/layinghens/current/eligibility/building/insulation.html
+++ b/app/views/layinghens/current/eligibility/building/insulation.html
@@ -63,7 +63,7 @@
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
-                {% if data['project-type'] == 'refurbish' %}
+                {% if data['project-type'] == 'refurb' %}
                     <p>
                         The building must have full wall and roof insulation.
                     </p>
