--- a/app/views/layinghens/current/eligibility/building/lighting.html
+++ b/app/views/layinghens/current/eligibility/building/lighting.html
@@ -45,7 +45,7 @@
 
             {% set nextPage = '../aviary/welfare' %}
             {% if poultryType != 'hen' %}
-                {% set nextPage = '../building/multi-tier' %}
+                {% set nextPage = '../aviary-pullets/multi-tier' %}
             {% endif %} 
 
                 {{ govukRadios ({
