--- a/app/views/layinghens/current/eligibility/solar/exemptions.html
+++ b/app/views/layinghens/current/eligibility/solar/exemptions.html
@@ -57,7 +57,7 @@
                             text: 'I am not making changes to this building’s roof',
                             value: 'I am not making changes to this building’s roof',
                             checked: true if 'I am not making changes to this building’s roof' | isIn(data['solar-exemptions'])
-                        } if data['project-type'] == 'refurbish',
+                        } if data['project-type'] == 'refurb',
                         {
                             text: 'The roof only faces north',
                             value: 'Faces north',
