--- a/app/views/layinghens/current/eligibility/ventilation/features.html
+++ b/app/views/layinghens/current/eligibility/ventilation/features.html
@@ -43,7 +43,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the ' + poultryType + ' housing have a mechanical ventilation system with these features?',
+                            text: 'Will the building have a mechanical ventilation system with these features? ',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
