--- a/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/egg-store.html
@@ -37,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['egg-store'] == 'Yes',
                             attributes: {
-                                    'data-next': 'concrete-apron'
+                                    'data-next': 'changing-area'
                                 }
                         },
                         {
