--- a/app/views/layinghens/current/eligibility/biosecurity/elim-vehicle-washing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-vehicle-washing-area.html
@@ -15,8 +15,17 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    There must be a designated washing and disinfecting area for vehicles entering the facility.
+                    The building must have a designated washing and disinfecting area for vehicles entering the facility with:
                 </p>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>   
+                        an area of concrete parking which is appropriate to the size of the vehicles entering the facility (minimum width of 3 metres)
+                    </li>
+                    <li>
+                        a drainage system and storage tanks for soiled water
+                    </li>
+                </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
