--- a/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
@@ -37,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['vaccination-lobby'] == 'Yes',
                             attributes: {
-                                    'data-next': 'concrete-apron'
+                                    'data-next': 'changing-area'
                                 }
                         },
                         {
