--- a/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the {{ poultryType }} housing have a designated area for washing and disinfecting vehicles?
+    Will the building have a designated area for washing and disinfecting vehicles?
 {% endblock %}
 
 {% block content %}
@@ -17,19 +17,36 @@
 
             <form method="post">
 
+            {% set hintHtml %}
+
+                <p class="govuk-hint">
+                    This must include:
+                </p>
+
+                <ul class="govuk-list govuk-list--bullet govuk-hint">
+                    <li>   
+                        an area of concrete parking which is appropriate to the size of the vehicles entering the facility (minimum width of 3 metres)
+                    </li>
+                    <li>
+                        a drainage system and storage tanks for soiled water
+                    </li>
+                </ul>
+
+            {% endset %}
+
             {{ govukRadios ({
                 idPrefix: 'vehicle-washing-area',
                 name: 'vehicle-washing-area',
                 classes: 'govuk-radios--inline',
                 fieldset: {
                     legend: {
-                        text: 'Will the ' + poultryType + ' housing have a designated area for washing and disinfecting vehicles?',
+                        text: 'Will the building have a designated area for washing and disinfecting vehicles?',
                         isPageHeading: true,
                         classes: 'govuk-fieldset__legend--l'
                     }
                 },
                 hint: {
-                    text: 'This must include an area of concrete parking which is appropriate to the size of the vehicles entering the facility (minimum width of 3 metres)'
+                    html: hintHtml
                 },
                 items: [
                 {
@@ -37,7 +54,7 @@
                     value: 'Yes',
                     checked: true if data['vehicle-washing-area'] == 'Yes',
                     attributes: {
-                                'data-next': 'soiled-water-drainage'
+                                'data-next': 'external-taps'
                             }
                 },
                  {
